--- a/bower.json
+++ b/bower.json
@@ -1,25 +1,26 @@
 {
-  "name": "react",
-  "version": "0.0.0",
-  "homepage": "https://github.com/joppe/react",
-  "authors": [
-    "Joppe Aarts <joppe@apestaartje.info>"
-  ],
-  "moduleType": [
-    "es6"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "underscore": "~1.8.3",
-    "backbone": "~1.2.3",
-    "jquery": "~2.1.4",
-    "react": "~0.13.3"
-  }
+    "name": "react",
+    "version": "0.0.0",
+    "homepage": "https://github.com/joppe/react",
+    "authors": [
+        "Joppe Aarts <joppe@apestaartje.info>"
+    ],
+    "moduleType": [
+        "es6"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "underscore": "~1.8.3",
+        "backbone": "~1.2.3",
+        "jquery": "~2.1.4",
+        "react": "~0.13.3",
+        "bootstrap": "~3.3.5"
+    }
 }
