--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "react",
-  "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/joppe/react.git"
-  },
-  "author": "Joppe Aarts",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/joppe/react/issues"
-  },
-  "devDependencies": {
-    "babel": "^5.8.23",
-    "es6-module-loader": "^0.17.8",
-    "systemjs": "^0.19.3"
-  },
-  "dependencies": {
-    "babel-core": "^5.8.25"
-  }
+    "name": "react",
+    "version": "0.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "babel": "babel src --stage 1 --out-dir web/js --modules system",
+        "babel-watch": "babel src --stage 1 --watch --out-dir web/js --modules system"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/joppe/react.git"
+    },
+    "author": "Joppe Aarts",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/joppe/react/issues"
+    },
+    "devDependencies": {
+        "babel": "^5.8.23",
+        "es6-module-loader": "^0.17.8",
+        "systemjs": "^0.19.3"
+    },
+    "dependencies": {
+        "babel-core": "^5.8.25"
+    }
 }
